@@ -110,9 +110,23 @@ their kind, and 58 triples `--jdk-only` was admitting by registration order are
 refused — including the `Function$Identity` / `UnaryOperator.identity` copies in
 `phases_late/streams.rs` that L7 item 4 did not reach.
 
-**Every lane but L12 is done.** (L1–L8 landed; L9 closed 2026-08-04; L10 landed
-2026-08-06 and with it the last blocker, and L11 spent it the same day — item 7's
-nine dispatch sites are deleted. L12 — item 11's residuals — is what is left.)
+**Every lane in the table above is done but L12.** (L1–L8 landed; L9 closed
+2026-08-04; L10 landed 2026-08-06 and with it the last blocker, and L11 spent it
+the same day — item 7's nine dispatch sites are deleted. L12 — item 11's
+residuals — is what is left.)
+
+**A SECOND pool is in flight. Its lanes are `SC-<n>`, and its FILENAMES collide
+with this table's lane numbers.** The strict-corpus campaign of 2026-08-06/07
+staffed one lane per corpus failure and filed each under
+`docs/known-issues/jdk-only/L<n>-*.md` — filenames that are kept as they are,
+because lanes are still writing them. Those numbers have **nothing** to do with
+the rows above: `L3-scanner-membername-residual.md` in *this* directory is the
+Scanner/MemberName layout lane, while
+`known-issues/jdk-only/L3-definehiddenclass-returns-null.md` is **SC-3**,
+`Lookup.defineHiddenClass`. **Cite the full path AND the `SC-<n>` label; never a
+bare lane number.** The reconciliation table — `SC-<n>` → record → subsystem →
+the wave-2 lane it collides with — and the campaign record are
+[`STRICT-CORPUS-CAMPAIGN-20260807.md`](STRICT-CORPUS-CAMPAIGN-20260807.md).
 
 ## Conflict matrix — read before claiming a second lane
 
@@ -141,7 +155,13 @@ measured as working and were not.
    that error made an inert guard read as a working one on 2026-08-04.
 2. **Both modes plus a HotSpot control.** `--jdk-only`, `--real-jdk`, and real
    HotSpot on the same probe. A divergence present in *both* CratonVM modes is
-   not a strict-mode defect.
+   not a strict-mode defect. **Give the control the same arguments the suite
+   gives it** — class path, `--module-path`, `--add-modules`, the lot.
+   `regression-suite/run.sh` builds those from one variable per arm precisely so
+   they cannot drift; an ad-hoc control that drops or mistypes one measures
+   nothing, and on 2026-08-06 that produced a wrong classification (see *Failure
+   modes*). If the control fails, run it three times before believing it: an
+   intermittent failure is a racy assertion in the vector, not a contract.
 3. **Check exit status, not just stdout.** A timed-out run prints a truncated
    transcript that reads exactly like a short clean one.
 4. **Gate the crate you actually edited.** An earlier gate set omitted
@@ -187,6 +207,20 @@ above looks paranoid.
   (24 named slots), and L10's own verification bullet, "`cargo test --release -p
   cratonvm-native-collections --lib` (94 tests)" — it is 105, and the lane never
   edited that crate. Take the census before sizing anything.
+* **A verdict measured against a broken oracle is worse than no verdict.** The
+  strict-corpus campaign's ad-hoc HotSpot arm ran `RJdkModule` with the module
+  name `cratonvm.regression.jdkonly`; the module in this tree is
+  `cratonvm.jdkonly.svc` (`regression-suite/modules/cratonvm.jdkonly.svc/module-info.java`,
+  and `run.sh:58`). HotSpot 25 duly failed, the vector was written off as a bad
+  one, and a **real CratonVM defect** — `Module.getLayer()` not answering the
+  boot layer, in both modes, `RJdkModule.java:57` — was nearly suppressed for the
+  whole campaign. With the right invocation HotSpot prints `PASS RJdkModule (44
+  checks)`. **A "HotSpot fails it too" verdict is only as good as the
+  invocation**, and step 2 of the protocol above is where it gets earned.
+  `RJdkProcess` is the same question with the opposite answer — HotSpot really
+  does fail it, intermittently, and the *intermittency* was the tell — so the
+  rule is not "distrust the oracle", it is "run the oracle the way the suite
+  runs it, and run it more than once".
 * **An absent instrument reads exactly like a satisfied one.** L10's first A-arm
   reading was `true=0 false=0`, which says "these dispatch sites are dead" — a
   tidy finding, and wrong: the binary was linked before the flag existed. Print
@@ -235,8 +269,24 @@ above looks paranoid.
    defects turned out to be. **Not green**, and now measured on every CI run by
    `scripts/jdk-only-strict-probes.sh` — see
    L8 retired (`jdk-only-wave2-L8-strict-corpus-green-RETIRED-20260805.md`).
-   Four open records stand between here and green, all four **compatibility**
-   defects that `--jdk-only` did not introduce.
+   The open records between here and green are all **compatibility** defects
+   that `--jdk-only` did not introduce. *(The count "four open records" was
+   written on 2026-08-05 and is not re-verified here — treat it as
+   **UNVERIFIED**; the 2026-08-06/07 corpus run below is the current number.)*
+
+   **Two instruments answer criterion 6 and they disagree by an order of
+   magnitude. Never quote one alone.**
+
+   | instrument | what it measures | reading, 2026-08-07 |
+   |---|---|---|
+   | `scripts/jdk-only-strict-probes.sh` | five breadth probes, scored section-by-section against a HotSpot control | **2 baselined divergences** (`scripts/baselines/jdk-only-strict-corpus-25-linux.txt`, both `JdkOnlyPlatformProbe/*/vthreads` — one per arm, so neither is strict-only) |
+   | `regression-suite/run.sh` `JDKONLY_CLASSES` | 21 hostile vectors, asserting JDK contracts check by check — **strict arm only**, never run in Compatible mode (`run.sh:83-86`) | **14 failures** |
+
+   Both are honest; they ask different questions. Reading criterion 6 off the
+   probe baseline **alone** badly overstates where the mode is — a green ratchet
+   over a narrow instrument is evidence about the instrument's reach, not about
+   the mode. Quote both, always. See
+   [`STRICT-CORPUS-CAMPAIGN-20260807.md`](STRICT-CORPUS-CAMPAIGN-20260807.md).
 
 ## State as of 2026-08-05
 
@@ -433,10 +483,14 @@ Three findings worth carrying into the other lanes:
   `register_unmodifiable_natives`.
 
 **Update, 2026-08-05 — L8 is retired, and criterion 6 is measured on every
-build.** One new probe over the five surfaces nothing covered (ProcessBuilder,
-security providers, virtual threads, agents/attach, JNI) found four divergences
-on its first run, and two of those were binding failures hiding three more
-underneath. Seven defects: five fixed, four filed. **Zero were introduced by
+build.** *(By the probe gate, which is not the whole of criterion 6 — the corpus
+asks a different question and got a much worse answer. See the two-instrument
+table under* Definition of done *.)* One new probe over the five surfaces nothing
+covered (ProcessBuilder, security providers, virtual threads, agents/attach, JNI)
+found four divergences on its first run, and two of those were binding failures
+hiding three more underneath. Seven defects: five fixed, four filed. *(5 + 4 ≠ 7;
+the arithmetic here is **UNVERIFIED** — it is not re-derivable from this
+document, and the retired lane doc is where the list lives.)* **Zero were introduced by
 `--jdk-only`** — every one was already wrong in `Compatible` mode and had simply
 never been executed, which is this wave's central pattern confirmed again.
 
@@ -483,7 +537,7 @@ demanded — is byte-identical to HotSpot 25 in **both** modes, and the new
 `CRATONVM_DBG_TPE_SHAPE` reports the receiver-shape predicate `true` 62/62 and
 38/38 with **zero** `false` across both workloads in both modes. L11's item 7 is
 unblocked; the retired lane doc is
-`docs/internal/L10-blocker-threadpool-init-DONE-20260806.md`.
+`L10-blocker-threadpool-init-DONE-20260806.md`.
 
 **L11 item 7 spent that on 2026-08-06, the same day.** All eight receiver-shape
 sites, the ninth receiver-blind `force_native_over_real_jdk_bytecode` arm and
@@ -496,7 +550,7 @@ question class-scoped on both dispatch paths. `CRATONVM_DBG_TPE_SHAPE` and
 an instrument for a decision the VM no longer makes can only ever print
 nothing, which is the same silence-is-not-zero trap the flag was designed
 around. The readings themselves are kept in the L10 record. Outcome record:
-`docs/internal/jdk-only-wave2-threadpoolexecutor-execute-receiver-shape-RETIRED-20260806.md`.
+`jdk-only-wave2-threadpoolexecutor-execute-receiver-shape-RETIRED-20260806.md`.
 
 **That last reading is identical on the pre-L10 binary, and saying so is the
 point.** The predicate already answered `true` for the receivers those workloads
@@ -548,3 +602,86 @@ document:
   other branch fire — `probes/L10ShapeInstrumentControlProbe` did it with
   `Unsafe.allocateInstance` until both it and the flag were retired with the
   predicate on 2026-08-06 — or the zero is unfalsifiable.
+
+**Update, 2026-08-06/07 — the strict corpus was run properly for the first time,
+and it reported 14 failures.** A separate pool, lanes `SC-1`…`SC-16`, took one
+lane per failure. On dev tip `84b85c624`: *37 passed, 14 failed — `RJdkStrict`
+`RJdkLambdas` `RJdkHandles` `RJdkReflect` `RJdkHidden` `RJdkModule`
+`RJdkForkJoin` `RJdkNio` `RJdkNet` `RJdkProcess` `RJdkSecurity` `RJdkJmx`
+`RJdkJni` `RJdkFailure`.* **Fourteen vectors, fourteen failures, at most
+thirteen distinct root causes** — `RJdkHidden` and `RJdkStrict` are two
+separately scheduled vectors dying on one shadowed placeholder, and no other
+pair has been checked for shared causation. **A failure count is an upper bound
+on the defect count, never an estimate of it**; that collapse was noticed only
+because two lanes' traces got compared, so diff a new trace against the filed
+ones before staffing a lane. The campaign record, with the
+per-lane table, the `SC-<n>` reconciliation and what still has to be measured, is
+[`STRICT-CORPUS-CAMPAIGN-20260807.md`](STRICT-CORPUS-CAMPAIGN-20260807.md); the
+evidence is one file per lane in
+[`docs/known-issues/jdk-only/`](../../known-issues/jdk-only/).
+
+**Nothing from that campaign has been built or re-measured.** No lane could run
+`cargo` or the VM; every fix is source-level and unverified by execution, and
+five lanes handed patches to files they did not own, which is the most likely
+thing to be missing from a merged tree. Read every "FIXED" in those records as
+*"fixed in source, unverified"* — most of them say so in their own headers. The
+one exception is SC-10, which changed a **Java vector** and measured it 26/26.
+
+Six things from it belong here rather than only in the campaign record:
+
+* **The headline: of the 14 failures, 12 fail in `--real-jdk` too, and ZERO are
+  strict-only.** `--jdk-only` is not rejecting legitimate things; it is
+  *executing* paths `Compatible` mode was papering over with synthetic stubs, and
+  the code underneath is wrong in both modes. The remaining work is ordinary
+  subsystem bug-fixing that fixes BOTH modes, not `--jdk-only` contract work.
+  This is L8's 2026-08-05 finding — "**Zero** were introduced by `--jdk-only`" —
+  at corpus scale.
+* **…and the corpus that established it runs ONE arm, which is a gap in the
+  instrument, not a footnote.** `run.sh` schedules `JDKONLY_CLASSES` only when
+  `CRATONVM_ARGS` names `--jdk-only` (`run.sh:83-86`), so these 21 vectors have
+  **never been run in Compatible mode**. The corpus answers *"does strict break
+  things?"* and **cannot answer *"does Compatible still work?"*** — SC-14 is the
+  proof the second question has a non-empty answer set: `RJdkServices` fails in
+  the default `--real-jdk` arm, passes under `--jdk-only`, and therefore never
+  appears in the 14 at all. Since the end state renames today's `--jdk-only` to
+  `--real-jdk`, **the arm this corpus cannot see is the one being deprecated
+  *into***. Criterion 4 is not measured by it either. Run `JDKONLY_CLASSES`
+  under `--real-jdk` and record how many more `RJdkServices`-shaped inversions
+  fall out; that count is the blind spot's size and it is currently unknown.
+  (`RJdkStrict` is the one deliberate exception — mode-divergent by design, and
+  skipped in Compatible mode with a printed reason.)
+* **The disease shape has a name now, and four lanes found it independently: a
+  synthetic stub or placeholder shadowing real JDK bytecode that already works.**
+  Registration is last-write-wins on the triple, so a placeholder registered
+  *later* in the boot sequence silently outranks a correct implementation
+  registered earlier — no exception, no warning, no census row that looks wrong.
+  The sharpest instance is `Lookup.defineHiddenClass`: a phase-54 placeholder
+  that ignored its arguments and never wrote slot 0 (`lookupClass`) shadowed the
+  real WP2.3-B implementation, and **one deletion fixes two regression classes**
+  (`RJdkHidden` and `RJdkStrict` — they are ONE root cause, not two; both die on
+  `NullPointerException: Cannot invoke "java.lang.Class.isHidden()"`).
+* **`RJdkModule` had been written off as a bad vector and is not one.** The
+  correction is in *Failure modes* above, because the lesson is about method.
+  It is a real CratonVM defect, in both modes, at `RJdkModule.java:57` — check 4
+  of 44, so no `CK` line is emitted and nothing about JPMS is exercised.
+  `--module-path` / `--add-modules` were **parsed and then read by nobody**
+  (SC-9, `known-issues/jdk-only/L9-module-not-in-boot-layer.md`).
+* **Two of the fourteen were only identified on 2026-08-07**, and both are
+  shapes this document has not carried before. `RJdkForkJoin` is a genuine
+  **hang** — rc=124 on a 300 s budget with zero output, one thread in the
+  watchdog dump, main recursed inline through `compute -> invokeAll -> doExec ->
+  exec` and parked at `ForkJoinTask.awaitDone(FJP,IZJ)I pc=218`, because a lazy
+  `fork()` `Bridge` leaves the real `invokeAll` bytecode waiting on a worker that
+  does not exist. **An rc=124 here is a hang, not a slow host — read the
+  watchdog dump, not the wall clock.** `RJdkFailure` is the opposite of a missing
+  feature: a wrong error **shape**, a `NoClassDefFoundError` escaping a
+  `catch (ClassNotFoundException)` in a negative test, because an `Error` is not
+  an `Exception`.
+* **Every pre-2026-08-06 `RJdkProcess` result is void.** The vector asserted
+  three separate live-process-table snapshots against a child (`cmd.exe /c exit
+  3`) chosen *because* it exits immediately — three coin flips, which HotSpot 25
+  also loses. A failure at `RJdkProcess.java:132`/`:134` carries zero information
+  about CratonVM. The rewritten vector points the tree section at a live child
+  and the exit-code section at the exiting one, **adding 7 assertions and
+  removing none** (46 → 53 checks), and measured 26/26 green including 18 runs
+  under load.
